--- a/templates/cv_template_en.tex
+++ b/templates/cv_template_en.tex
@@ -29,6 +29,7 @@
 \ecvdateofbirth{(Remove if not relevant)}
 \ecvgender{(Remove if not relevant)}
 \ecvdate{\today}
+\ecvyoutube{\url{www.youtube.com/myChannel}} 
 %\ecvpicture[width=3cm]{mypicture}
 %\ecvfootnote{For further details please take a look here: \url{http://europass.cedefop.eu.int}\\
 %\textcopyright~European Communities, 2003.}
