--- a/templates/cv_template_academic_en.tex
+++ b/templates/cv_template_academic_en.tex
@@ -49,7 +49,7 @@
 
 \ecvname{Name, Surname}
 \ecvfootername{Name, Surname}
-\ecvaddress{(Remove if not relevant)}
+\ecvaddress[(Remove if not relevant)][(Remove if not relevant)]{(Remove if not relevant)}
 \ecvtelephone[(Remove if not relevant)][(Remove if not relevant)]{(Remove if not relevant)}
 \ecvfax{(Remove if not relevant)}
 \ecvemail{\href{mailto:email@gemail.com}{email@email.com}}
