Fixed typos into the template files

--- a/templates/cv_template_academic_en.tex
+++ b/templates/cv_template_academic_en.tex
@@ -105,7 +105,7 @@
 \pdfbookmark{Research areas}{Research areas}
 \section{Research areas}
 
-\ecvitem{}{Autonomous systems; distributed control and optimization over networks; nonsmooth systems; picewise quadratic stability.}
+\ecvitem{}{Autonomous systems; distributed control and optimization over networks; nonsmooth systems; piecewise quadratic stability.}
 
 \pdfbookmark{Personal skills and~competences}{Personal skills and~competences}
 \section{Personal skills and~competences}
@@ -188,7 +188,7 @@
 \section{Research activities}
 
 \ecvitem{}{\textbf{Stability of piecewise-linear systems}}
-\ecvitem{}{Something related to the picewise-linear systems \refconferencesPublications[FirstPubLabel], \refconferencesPublications[SecondPubLabel] ad \refconferencesPublications[ThirdPubLabel].}
+\ecvitem{}{Something related to the piecewise-linear systems \refconferencesPublications[FirstPubLabel], \refconferencesPublications[SecondPubLabel] and \refconferencesPublications[ThirdPubLabel].}
 
 \pdfbookmark{Publications}{Publications}
 \section{Publications}
