--- a/templates/cv_template_en.tex
+++ b/templates/cv_template_en.tex
@@ -1,4 +1,4 @@
-\documentclass[totpages,helvetica,openbib,english,nologo,notitle,totpages]{europecv}
+\documentclass[totpages,helvetica,openbib,english,nologo,nobranding,notitle,totpages]{europecv}
 \usepackage[T1]{fontenc}
 \usepackage{graphicx} 
 \usepackage[a4paper,top=1.27cm,left=1cm,right=1cm,bottom=2cm]{geometry}
