Update LPPL link

--- a/europecv.tex
+++ b/europecv.tex
@@ -720,7 +720,7 @@ The flags have been downloaded from \url{http://europa.eu.int/abc/symbols/emblem
 \textbf{\large{9\hspace{0.5cm}License}}
 \vspace{0.5cm}
 
-All files in this package may be distributed under the terms of the \LaTeX\ Project Public License. See \url{http://www.ctan.org/tex-archive/help/Catalogue/licenses.lppl.html} for the details of that license.
+All files in this package may be distributed under the terms of the \LaTeX\ Project Public License. See \url{https://www.latex-project.org/lppl/} for the details of that license.
 
 \appendix
 
