--- a/europecv.tex
+++ b/europecv.tex
@@ -42,7 +42,7 @@
 \title{\textsf{europecv}: an unofficial class\\
 	for European curricula}
 \author{Nicola Vitacolonna\\
-	\href{mailto:vitacolo@dimi.uniud.it}{\texttt{vitacolo@dimi.uniud.it}}\\
+	\href{mailto:nicola.vitacolonna@uniud.it}{\texttt{nicola.vitacolonna@uniud.it}}\\
 	Department of Mathematics and Computer Science\\
 	University of Udine, Italy\\
 	\\
