--- a/europecv.tex
+++ b/europecv.tex
@@ -227,7 +227,8 @@ The following options can be used with the \texttt{\textbackslash documentclass}
 	\section{Personal information}
 	\ecvitem{\ecv{date}\texttt{\{}\textit{date}\texttt{\}}}{Sets CV update date to \emph{date}. To 
 	enter the current date use the \texttt{$\setminus$}\texttt{today} command.}
-	\ecvitem{\ecv{name}\texttt{\{}\textit{name}\texttt{\}}}{Sets your name to \emph{name}.}
+	\ecvitem{\ecv{name}\texttt{\{}\textit{name, surname}\texttt{\}}}{Sets your name to \emph{name}, 
+	and your surname to \emph{surname}.}
 	\ecvitem{\ecv{footername}\texttt{\{}\textit{name}\texttt{\}}}{Sets your name as it appears in the footer. By default, the name in the footer is the same as the one specified with \ecv{name}. Use \ecv{footername} is you want it to be different (for example, if you want to exchange the order of first name and last name).}
 	\ecvitem{\ecv{firstname}\texttt{\{}\textit{name}\texttt{\}}}{\textbf{Deprecated.} Use \ecv{name} and \ecv{footername} instead.}
 	\ecvitem{\ecv{lastname}\texttt{\{}\textit{name}\texttt{\}}}{\textbf{Deprecated.} Use \ecv{name} and \ecv{footername} instead.}
@@ -269,7 +270,7 @@ For example, consider the following document:
 	\usepackage{graphicx}
 	
 	% Define personal data
-	\ecvname{Alan Touring}
+	\ecvname{Alan, Touring}
 	\ecvfootername{}
 	\ecvaddress[Wilmslow 1, Cheshire, England][Wilmslow 2, Cheshire, England]{Wilmslow 3, 
 	Cheshire, England}	
@@ -299,7 +300,7 @@ The above will produce the following output:
 
 \bigskip\medskip
 {
-   \ecvname{Alan Touring}
+   \ecvname{Alan, Touring}
    \ecvfootername{}
    \ecvaddress[Wilmslow 1, Cheshire, England][Wilmslow 2, Cheshire, England]{Wilmslow 3, 
    Cheshire, England}
@@ -330,7 +331,7 @@ If you do not want to use so much space, you may add some negative space with \e
 	\documentclass[helvetica,notitle,nobranding,nologo]{europecv}
 	\usepackage{graphicx}
 	
-	\ecvname{Alan Touring}
+	\ecvname{Alan, Touring}
 	\ecvfootername{}
 	\ecvaddress[Wilmslow 1, Cheshire, England][Wilmslow 2, Cheshire, England]{Wilmslow 3, 
 	Cheshire, England}	
@@ -359,7 +360,7 @@ If you do not want to use so much space, you may add some negative space with \e
 \end{quote}
 The output of the above code looks like this:
 {
-	\ecvname{Alan Touring}
+	\ecvname{Alan, Touring}
 	\ecvfootername{}
 	\ecvaddress[Wilmslow 1, Cheshire, England][Wilmslow 2, Cheshire, England]{Wilmslow 3, 
 	Cheshire, England}	
@@ -703,7 +704,8 @@ Europass logo. Thanks to \textbf{Roman Bertle} for suggesting to redefine item m
 2018.09.02 package releases, respectively. Thanks to \textbf{redlulz} and \textbf{Emil 
 Gardstr\"{o}m} for fixing the German (2018.10.12) and Swedish (2019.01.25) translation, 
 respectively. Thanks to \textbf{JPSPLeite} for improving the Portuguese translation. Thanks to 
-\textbf{Marc-Andre Hermanns} for adding the \texttt{nobranding} feature.
+\textbf{Marc-Andre Hermanns} for adding the \texttt{nobranding} feature. Thanks to \textbf{Antonios 
+Tsolomitis} for his suggestions into the 2020.01.06 package release.
 
 \vspace{0.5cm}
 \textbf{\large{8\hspace{0.5cm}Disclaimer}}
