--- a/europecv.tex
+++ b/europecv.tex
@@ -268,6 +268,9 @@ The following options can be used with the \texttt{\textbackslash documentclass}
 	\ecvitem{\ecv{homepage}\texttt{\{}\texttt{\textbackslash}\texttt{url\{URL\}}\texttt{\}}}{Sets the Home page to \emph{URL}.}
 	\ecvitem{\ecv{skype}\texttt{\{}\textit{skype}\texttt{\}}}{Sets the Skype account to 
 	\emph{skype}.}
+	\ecvitem{\ecv{matrixriot}\texttt{\{}\textit{matrixriot}\texttt{\}}}{Sets the Matrix/Riot 
+	account to \emph{matrixriot}. Here the link with more information about the service 
+	\url{https://matrix.org/}.}
 	\ecvitem{\ecv{youtube}\texttt{\{}\textit{youtubeChannel}\texttt{\}}}{Sets the YouTube Channel 
 	link to \emph{youtubeChannel}.}
 	\ecvitem{\ecv{nationality}\texttt{\{}\textit{nationality}\texttt{\}}}{Sets the nationality to \emph{nationality}.}
@@ -304,6 +307,7 @@ For example, consider the following document:
 	\ecvpec{\href{mailto:alan.touring@pec.it}{alan.touring@pec.it}}
 	\ecvhomepage{\url{www.homepage.com}}
 	\ecvskype{alan-touring}
+	\ecvmatrixriot{alan-touring}
 	\ecvyoutube{\url{www.youtube.com/AlanTouringChannel}}
 	\ecvnationality{English}
 	\ecvdateofbirth{June 23 1927}
@@ -334,6 +338,7 @@ The above will produce the following output:
    \ecvpec{\href{mailto:alan.touring@pec.it}{alan.touring@pec.it}}
    \ecvhomepage{\url{www.homepage.com}}
    \ecvskype{alan-touring}
+   \ecvmatrixriot{alan-touring}
    \ecvnationality{English}
    \ecvdateofbirth{June 23 1927}
    \ecvgender{Male}
@@ -365,6 +370,7 @@ If you do not want to use so much space, you may add some negative space with \e
 	\ecvpec{\href{mailto:alan.touring@pec.it}{alan.touring@pec.it}}
 	\ecvhomepage{\url{www.homepage.com}}
 	\ecvskype{alan-touring}
+	\ecvmatrixriot{alan-touring}
 	\ecvyoutube{\url{www.youtube.com/AlanTouringChannel}}
 	\ecvnationality{English}
 	\ecvdateofbirth{June 23 1927}
@@ -394,6 +400,7 @@ The output of the above code looks like this:
  	\ecvpec{\href{mailto:alan.touring@pec.it}{alan.touring@pec.it}}
  	\ecvhomepage{\url{www.homepage.com}}
  	\ecvskype{alan-touring}
+ 	\ecvmatrixriot{alan-touring}
  	\ecvyoutube{\url{www.youtube.com/AlanTouringChannel}}
 	\ecvnationality{English}
 	\ecvdateofbirth{June 23 1927}
