--- a/templates/cv_template_academic_en.tex
+++ b/templates/cv_template_academic_en.tex
@@ -56,6 +56,7 @@
 \ecvprofessional{\href{mailto:email@email.it}{email@email.it}}
 \ecvpec{\href{mailto:emailo@pec.it}{email@pec.it}}
 \ecvhomepage{\url{www.homepage.com}}
+\ecvmatrixriot{(Remove if not relevant)}
 \ecvskype{(Remove if not relevant)}
 \ecvnationality{(Remove if not relevant)}
 \ecvdateofbirth{(Remove if not relevant)}
