--- a/europecv.tex
+++ b/europecv.tex
@@ -47,11 +47,11 @@
 	University of Udine, Italy\\
 	\\
 	Giuseppe Silano\\
-	\href{mailto:giuseppe.silano@unisannio.it}{\texttt{giuseppe.silano@unisannio.it}}\\
-    Department of Engineering\\
-    University of Sannio in Benevento, Italy\\
+	\href{mailto:giuseppe.silano@fel.cvut.cz}{\texttt{giuseppe.silano@fel.cvut.cz}}\\
+    Faculty of Electrical Engineering\\
+    Czech Technical University in Prague, Czech Republic\\
 }
-\date{January 03, 2020}
+\date{October 26, 2020}
 
 
 \begin{document}
@@ -735,7 +735,8 @@ Europass logo. Thanks to \textbf{Roman Bertle} for suggesting to redefine item m
 Gardstr\"{o}m} for fixing the German (2018.10.12) and Swedish (2019.01.25) translation, 
 respectively. Thanks to \textbf{JPSPLeite} for improving the Portuguese translation. Thanks to 
 \textbf{Marc-Andre Hermanns} for adding the \texttt{nobranding} feature. Thanks to \textbf{Antonios 
-Tsolomitis} for his suggestions into the 2020.01.06 package release.
+Tsolomitis} for his suggestions into the 2020.01.06 package release. Thanks to \textbf{
+Davide Peressoni} for the biber support (2020.10.26 package release).
 
 \vspace{0.5cm}
 \textbf{\large{8\hspace{0.5cm}Disclaimer}}
