Fix condensed series name (narrow option)
With (current) TeX Live 2020, the `narrow` option triggers
an undesirable font substitution:

    LaTeX Font Warning: Font shape `T1/phv/mc/n' undefined
    (Font)              using `T1/phv/m/n' instead on input line 112.

The replacement font is not condensed, hence failing to produce the
desired narrow aspect.

This comes from an upstream change¹, where the `mc` fontseries name has
been established to be simply `c`.

¹: latex3/latex2e/issues/289

--- a/europecv.cls
+++ b/europecv.cls
@@ -6,7 +6,7 @@
 % See  https://ctan.mirror.garr.it/mirrors/CTAN/help/Catalogue/licenses.lppl.html
 % for the details of that license
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesClass{europecv}[01/03/2020 (Unicode TeX detection) European curriculum vitae class]
+\ProvidesClass{europecv}[05/09/2021 (Unicode TeX detection) European curriculum vitae class]
 
 % CV models and instructions:
 %   http://europass.cedefop.eu.int/htm/index.htm
@@ -240,7 +240,7 @@
   \renewcommand{\sfdefault}{ma1}
 }
 \DeclareOption{narrow}{
-  \renewcommand{\seriesdefault}{mc} % Narrow
+  \renewcommand{\seriesdefault}{c} % Narrow
   \renewcommand{\bfdefault}{bc}  % Boldface narrow
 }
 % No title
